# octoprint-fazenda3d

./: README.md  Taskfile.yml  pyproject.toml  requeriments.txt  requirements.txt
extras/: README.txt
extras/github/: bug_report.yml
octoprint-fazenda3d/: MANIFEST.in
octoprint-fazenda3d/extras/: octoprint_fazenda3d.md
octoprint-fazenda3d/extras/github/: feature_request.yml
octoprint-fazenda3d/octoprint_fazenda3d/: __init__ copy.py  __init__.py
octoprint-fazenda3d/octoprint_fazenda3d/static/css/: octoprint_fazenda3d.css
octoprint-fazenda3d/octoprint_fazenda3d/static/js/: fazenda3d.js  octoprint_fazenda3d.js
octoprint-fazenda3d/octoprint_fazenda3d/templates/: fazenda3d_tab.jinja2
octoprint_fazenda3d/: __init__.py
octoprint_fazenda3d/static/js/: octoprint_fazenda3d.js
octoprint_fazenda3d/templates/: fazenda3d_tab.jinja2
translations/: README.txt
